styles/globals.css
/* Tailwind */
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

html,
body {
  background-color: #f1f5f9;
  color: #6b7280;
  padding: 0;
  margin: 0;
}

html.dark,
.dark body {
  background-color: #262626;
  color: #fff;
}

* {
  border-color: #f1f5f9;
}

.dark * {
  border-color: #404040;
}

/* Button styles */
button {
  transition: background-color 0.3s, color 0.3s;
}

/* Input and other form fields */
input, textarea, select, button {
  background-color: #404040;
  color: #ffffff;
  border: 1px solid #404040;
  padding: 0.5rem;
  transition: background-color 0.3s, color 0.3s;
}

.dark input, .dark textarea, .dark select, .dark button {
  background-color: #262626;
  color: #ffffff;
  border: 1px solid #404040;
  padding: 0.5rem;
}

/* Apply a focus ring for accessibility */
input:focus, select:focus, button:focus {
  outline: 4px solid #c8c8c8;
  outline-offset: 2px;
}

.dark input:focus, .dark select:focus, .dark button:focus {
  outline: 4px solid #444;
  outline-offset: 2px;
}

textarea:focus {
  outline: none;
}

/* General link styles */
a {
  color: #ffffff;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

/* Footer styles */
footer {
  background-color: #f1f5f9;
}

.dark footer {
  background-color: #262626;
}

footer a {
  color: #bbb;
}

footer a:hover {
  color: #fff;
  text-decoration: underline;
}

select {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg"><polygon points="70,90 100,50 40,50" style="fill:%239ca3af;"/></svg>');
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.3em;
}

select.select-selected {
  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg"><polygon points="70,90 100,50 40,50" style="fill:%23ffffff;"/></svg>');
}

.dark select {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg"><polygon points="70,90 100,50 40,50" style="fill:%23ffffff;"/></svg>');
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.3em;
}

.spinner {
  height: 40px;
  margin: 50px auto;
  position: relative;
  width: 40px;
}

.dot1, .dot2 {
  -webkit-animation: bounce 2.0s infinite ease-in-out;
  animation: bounce 2.0s infinite ease-in-out;
  background-color: rgb(156 163 175);
  border-radius: 50%;
  height: 100%;
  left: 0;
  opacity: 0.6;
  position: absolute;
  top: 0;
  width: 100%;
}

.dot2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes bounce {
  0%, 100% { transform: scale(0.0) }
  50% { transform: scale(1.0) }
}

@keyframes bounce {
  0%, 100% {
    transform: scale(0.0);
  } 50% {
    transform: scale(1.0);
  }
}

.modal {
  display: flex;
  align-items: center;
  height: 100%;
  justify-content: center;
  right: 0;
  padding: 0 20px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10;
}

.modal .background {
  backdrop-filter: blur(17px);
  background: rgba(255, 255, 255, 0.03);
  height: 100%;
  mix-blend-mode: normal;
  position: absolute;
  width: 100%;
}

.modal .content-outer {

}

.modal .content {
  background: #262626;
  box-shadow: 0px 6px 12px 5px rgba(2, 2, 2, 0.05);
  display: flex;
  flex-direction: column;
  max-height: calc(100% - 40px);
  max-width: 780px;
  position: relative;
  width: 100%;
}

@media (max-width: 950px) {
  .modal .content {
    max-height: calc(100% - 120px);
  }
}

.todo {
  /* backdrop-filter: blur(2px); */
  background: rgba(0, 0, 0, 0.9);
  mix-blend-mode: normal;
}

.urantia-api-highlighted {
  color: rgb(45, 163, 214); /* text-sky-400 */
  font-style: normal;
  text-decoration: underline;
}

.dark .urantia-api-highlighted {
  color: rgb(56 189 248); /* text-sky-400 */
}

[id] { /* Target all elements with an ID */
  scroll-margin-top: 60px;
}

/* Fade in animation */
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.fade-in {
  animation-name: fadeIn;
  animation-duration: 0.5s;
  animation-fill-mode: both;
}

.hero-image {
  background: #262626;
  background-image: url('/background.png');
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.vision {
  background: #262626;
  background-image: url('/vision.png');
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

@media screen and (min-width: 1100px) {
  .upcoming-features {
    bottom: -53rem;
  }

  .vision-and-mission {
    padding-top: 45rem;
  }
}

.urantia-dev-blockquote {
  border-left: 4px solid #404040;
  display: block;
  padding-left: 1rem;
}

.urantia-dev-blockquote-last {
  border-left: 4px solid #404040;
  display: block;
  padding-left: 1rem;
  margin-bottom: 2rem;
}

.urantia-dev-pb-4 {
  display: block;
  margin-bottom: 2rem;
}

.urantia-dev-pb-2 {
  display: block;
  margin-bottom: 1rem;
}

.urantia-dev-pb-0 {
  margin-bottom: 0;
}

.urantia-dev-pb-4 {
  display: block;
  margin-bottom: 2rem;
}

.urantia-dev-py-4 {
  display: block;
  margin-bottom: 2rem;
  padding-top: 2rem;
  text-align: center;
}

.urantia-dev-py-0 {
  margin-bottom: 0;
  padding-top: 0;
}

.urantia-dev-pl-2-pb-0 {
  display: block;
  padding-left: 1rem;
}

.urantia-dev-pl-2-pb-2 {
  display: block;
  padding-left: 1rem;
  margin-bottom: 1rem;
}

.urantia-dev-pl-4-pb-0 {
  display: block;
  padding-left: 2rem;
  margin-bottom: 0;
}

.urantia-dev-pl-4-pb-2 {
  display: block;
  padding-left: 2rem;
  margin-bottom: 1rem;
}

.dot {
  border-bottom: 1px dotted #404040;
  flex-grow: 1;
}

.pra {
  display: flex;
  justify-content: space-between;
  line-height: 1.5rem;
  font-size: 0.9rem;
}

@media screen and (min-width: 768px) {
  .pra {
    font-size: 1.125rem;
  }
}

.scaps {
  font-variant-caps: small-caps;
}

.note .urantia-dev-pb-4 {
  margin-bottom: 0;
}

.note .urantia-dev-pb-2 {
  margin-bottom: 0;
}

.bookmark .urantia-dev-pb-4 {
  margin-bottom: 0;
}

.bookmark .urantia-dev-pb-2 {
  margin-bottom: 0;
}

.isolated-quote .urantia-dev-pb-4 {
  margin-bottom: 0;
}

.isolated-quote .urantia-dev-pb-2 {
  margin-bottom: 0;
}

.select-style {
  -webkit-appearance: none;  /* Remove default arrow in WebKit browsers */
  -moz-appearance: none;     /* Remove default arrow in older Firefox browsers */
  appearance: none;          /* Remove default arrow from standard-compliant browsers */
  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg"><polygon points="70,90 100,50 40,50" style="fill:#9ca3af;"/></svg>'); /* Custom arrow */
  background-repeat: no-repeat;
  background-position: right 0.5rem center;
  background-size: 1.3em;
  padding-right: 2rem;
}

.dark .select-style {
  -webkit-appearance: none;  /* Remove default arrow in WebKit browsers */
  -moz-appearance: none;     /* Remove default arrow in older Firefox browsers */
  appearance: none;          /* Remove default arrow from standard-compliant browsers */
  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" xmlns="http://www.w3.org/2000/svg"><polygon points="70,90 100,50 40,50" style="fill:%23ffffff;"/></svg>'); /* Custom arrow */
  background-repeat: no-repeat;
  background-position: right 0.5rem center;
  background-size: 1.3em;
  padding-right: 2rem;
}

@keyframes moveGradient {
  0% { background-position: 0% 50%; }
  50% { background-position: 100% 50%; }
  100% { background-position: 0% 50%; }
}

.animated-gradient {
  animation: moveGradient 5s ease infinite;
  background-size: 400% 400%;
  background: linear-gradient(45deg, #6b7280, #4b5563, #374151, #1f2937);
}

